# environment-setup

./: README.md  workbench.yaml
ml-environment-setup/: main.py  notebook1.py  pyproject.toml
