[project]
name = "ml-environment-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.4.0",
    "marimo>=0.16.5",
    "matplotlib>=3.10.6",
    "mcp>=1",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "openai>=2.1.0",
    "pandas>=2.3.3",
    "polars[pyarrow]>=1.34.0",
    "pydantic>=2",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server>=1.13.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "sqlglot>=27.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]
